sync github with local xcode

--- a/get_gateway_token.yml
+++ b/get_gateway_token.yml
@@ -11,7 +11,7 @@
     - ansible_vault_gateway_var.yml
     - ansible_vault_storage_var.yml
     - vsp_uai_gateway_variables.yml
-
+  tasks:
 ####################################################################
 # Task 0 : Get UAI gateway token
 ####################################################################
