--- a/get_gateway_token.yml
+++ b/get_gateway_token.yml
@@ -25,4 +25,5 @@
     - debug:
         var: result_token
     - name: Set gateway token
+      set_fact:
         gateway_token = "{{ result_token.api_token.token }}"
