--- a/create_ldev.yml
+++ b/create_ldev.yml
@@ -21,7 +21,7 @@
         connection_info:
           connection_type: "{{ connection_type }}"
           address: "{{ uai_gateway_address }}"
-          api_token: "{{ result_token.api_token.token }}"
+          api_token: "{{ gateway_token }}"
 #          subscriber_id: "{{ subscriber_id }}"
         storage_system_info:
           serial: "{{ storage_serial }}"
