--- a/create_ldev.yml
+++ b/create_ldev.yml
@@ -13,6 +13,19 @@
     - vsp_uai_gateway_variables.yml
 
   tasks:
+    - name: Get UAI gateway token
+      hv_uaig_token_fact:
+        connection_info:
+          address: "{{ uai_gateway_address }}"
+          username: "{{ vault_gateway_username }}"
+          password: "{{ vault_gateway_secret }}"
+      register: result_token
+      ignore_errors: False
+    - debug:
+        var: result_token
+    - name: Set gateway token
+      set_fact:
+        gateway_token: "{{ result_token.api_token.token }}"
     - name: Create ldev
       hv_ldev:
         connection_info:
@@ -21,7 +34,6 @@
           api_token: "{{ gateway_token }}"
         storage_system_info:
           serial: "{{ storage_serial }}"
-        state: "{{ state_present }}"
         spec:
           pool_id: "{{ ldev_pool_id_1 }}"
           size: "{{ ldev_size_1 }}"
