--- a/create_ldev.yml
+++ b/create_ldev.yml
@@ -23,15 +23,15 @@
       ignore_errors: False
     - debug:
         var: result_token
-    - name: Set gateway token
-      set_fact:
-        gateway_token: "{{ result_token.api_token.token }}"
+#    - name: Set gateway token
+#      set_fact:
+#        gateway_token: "{{ result_token.api_token.token }}"
     - name: Create ldev
       hv_ldev:
         connection_info:
           connection_type: "{{ connection_type }}"
           address: "{{ uai_gateway_address }}"
-          api_token: "{{ gateway_token }}"
+          api_token: "{{ result_token.api_token.token }}"
         storage_system_info:
           serial: "{{ storage_serial }}"
         spec:
