--- a/create_ldev.yml
+++ b/create_ldev.yml
@@ -23,21 +23,7 @@
       ignore_errors: False
     - debug:
         var: result_token
-#    - name: Set gateway token
-#      set_fact:
-#        gateway_token: "{{ result_token.api_token.token }}"
-    - name: Create ldev
-      hv_ldev:
-        connection_info:
-          connection_type: "{{ connection_type }}"
-          address: "{{ uai_gateway_address }}"
-          api_token: "{{ result_token.api_token.token }}"
-        storage_system_info:
-          serial: "{{ storage_serial }}"
-        spec:
-          pool_id: "{{ ldev_pool_id_1 }}"
-          size: "{{ ldev_size_1 }}"
-          name: "{{ ldev_name_1 }}"
-      register: result
-    - debug:
-        var: result
+    - name: Set gateway token
+      set_fact:
+        gateway_token: "{{ result_token.api_token.token }}"
+
