--- a/create_ldev.yml
+++ b/create_ldev.yml
@@ -26,4 +26,5 @@
     - name: Set gateway token
       set_fact:
         gateway_token: "{{ result_token.api_token.token }}"
-
+    - name: Create Ldev
+        hv_ldev:
