--- a/create_ldev.yml
+++ b/create_ldev.yml
@@ -27,7 +27,7 @@
       set_fact:
         gateway_token: "{{ result_token.api_token.token }}"
     - name: Create Ldev
-      hv_ldev:
+      hitachivantara.vspone_block.hv_ldev:
         connection_info:
           address: "{{ uai_gateway_address }}"
           username: "{{ vault_gateway_username }}"
