--- a/create_ldev.yml
+++ b/create_ldev.yml
@@ -64,3 +64,21 @@
       register: result
     - debug:
         var: result
+    - name: Create remote hostgroup
+      hv_hg:
+        connection_info:
+          connection_type: "{{ connection_type }}"
+          address: "{{ uai_gateway_address }}"
+          api_token: "{{ gateway_token }}"
+        storage_system_info:
+          serial: "{{ storage_serial }}"
+        state: "{{ state_present }}"
+        spec:
+          name: "{{ hostgroup_name_2 }}"
+          port: "{{ hostgroup_port_2 }}"
+          host_mode: "{{ hostgroup_host_mode_2 }}"
+          host_mode_options: "{{ hostgroup_host_mode_options_2 }}"
+          wwns: "{{ hostgroup_wwns_2 }}"
+      register: result
+    - debug:
+        var: result
