--- a/vsp_uai_gateway_variables.yml
+++ b/vsp_uai_gateway_variables.yml
@@ -26,3 +26,13 @@ hostgroup_host_mode_options_1 : [ 54, 63 ]
 hostgroup_wwns_1 :
   - 1876543210ABCDE0
   - 1876543210ABCDE1
+#####################################################################
+# Task 2 : Create hostgroup
+######################################################################
+hostgroup_name_1 : ntrs_demo_dc2_1002
+hostgroup_port_1 : CL7-A
+hostgroup_host_mode_1 : VMWARE_EXTENSION
+hostgroup_host_mode_options_1 : [ 54, 63 ]
+hostgroup_wwns_1 :
+  - 2876543210ABCDE0
+  - 2876543210ABCDE1
