--- a/create_ldev.yml
+++ b/create_ldev.yml
@@ -82,3 +82,23 @@
       register: result
     - debug:
         var: result
+    - name: Create HUR pair
+      hv_hur:
+        storage_system_info:
+          serial: '{{ storage_serial }}'
+        connection_info:
+          connection_type: "{{ connection_type }}"
+          address: "{{ uai_gateway_address }}"
+          api_token: "{{ result_token.api_token.token }}"
+          subscriber_id: "{{ subscriber_id }}"
+        spec:
+          primary_volume_id: "{{ created_ldev_id }}"
+          primary_volume_journal_id: "{{ hur_primary_volume_journal_id_1 }}"
+          secondary_volume_journal_id: "{{ hur_secondary_volume_journal_id_1 }}"
+          secondary_pool_id: "{{ hur_secondary_pool_id_1 }}"
+          allocate_new_consistency_group: "{{ hur_allocate_new_consistency_group_1 }}"
+          secondary_storage_serial_number: "{{ storage_serial_2 }}"
+          secondary_hostgroup:  "{{ hostgroup_name_2 }}"
+      register: result
+    - debug:
+        var: result
