--- a/check_version.yml
+++ b/check_version.yml
@@ -3,5 +3,7 @@
   gather_facts: false
   collections:
     - hitachivantara.vspone_block.vsp
-  debug:
-    msg: “hitachivantara.vspone_block {{ lookup(‘hitachivantara.vspone_block’, ‘hitachivantara’) }}"
+  tasks:
+    -name: Check version
+      debug:
+        msg: “hitachivantara.vspone_block {{ lookup(‘hitachivantara.vspone_block’, ‘hitachivantara’) }}"
