--- a/check_version.yml
+++ b/check_version.yml
@@ -5,5 +5,6 @@
     - hitachivantara.vspone_block.vsp
   tasks:
     - name: Check version
+      hv_lun:
     - debug:
         msg: “hitachivantara.vspone_block {{ lookup(‘hitachivantara.vspone_block’, ‘hitachivantara’) }}"
