--- a/check_version.yml
+++ b/check_version.yml
@@ -6,6 +6,6 @@
   tasks:
     - name: "Check version"
       set_fact:
-        version_hitachi: "{{ lookup('vsp', 'hitachivantara.vspone_block') }}"
+        version_hitachi: "{{ lookup('hitachivantara.vspone_block.vsp', 'hitachivantara') }}"
     - debug: var=version_hitachi
 
