--- a/create_ldev.yml
+++ b/create_ldev.yml
@@ -27,8 +27,8 @@
           size: "{{ ldev_size_1 }}"
           name: "{{ ldev_name_1 }}"
       register: result
-    - debug:
-        var: result
     - name: Set LDEV ID
       set_fact:
         created_ldev_id: "{{ result.data.ldev_id }}"
+    - debug:
+        var created_ldev_id
