--- a/create_pvol_hostgroup.yml
+++ b/create_pvol_hostgroup.yml
@@ -1,7 +1,7 @@
 ####################################################################
 # Create PVOL Host Group
 ####################################################################
-- name: Logical Device Module
+- name: Hostgroup Module
   hosts: localhost
   gather_facts: false
   collections:
