--- a/get_constants.yml
+++ b/get_constants.yml
@@ -10,16 +10,16 @@
   tasks:
     - set_stats:
          data:
-           uai_gateway_address: "{{ gtwy_addr }}"
-           vault_gateway_username: "{{ gtwy_user }}"
-           vault_gateway_secret: "{{ gtwy_pass }}"
+           uai_gateway_address: gtwy_addr
+           vault_gateway_username: gtwy_user }}"
+           vault_gateway_secret: gtwy_pass }}"
            connection_type: "gateway"
-           storage_serial: "{{ pvol_serial }}"
-           storage_address: "{{ pvol_ip }}"
-           vault_storage_username: "{{ storage_user }}"
-           vault_storage_secret: "{{ storage_pass }}"
-           storage_serial_2: "{{ svol_serial }}"
-           storage_address_2: "{{ svol_ip }}"
+           storage_serial: pvol_serial
+           storage_address: pvol_ip
+           vault_storage_username: storage_user
+           vault_storage_secret: storage_pass
+           storage_serial_2: svol_serial
+           storage_address_2: svol_ip
            state_present: "present"
     - debug:
          var: uai_gateway_address
