--- a/get_constants.yml
+++ b/get_constants.yml
@@ -22,14 +22,14 @@
            storage_address_2: svol_ip
            state_present: "present"
     - debug:
-         var: uai_gateway_address
-         var: vault_gateway_username
-         var: vault_gateway_secret
-         var: connection_type
-         var: storage_serial
-         var: storage_address
-         var: vault_storage_username
-         var: vault_storage_secret
-         var: storage_serial_2
-         var: storage_address_2
-         var: state_present
+         var01: uai_gateway_address
+         var02: vault_gateway_username
+         var03: vault_gateway_secret
+         var04: connection_type
+         var05: storage_serial
+         var06: storage_address
+         var07: vault_storage_username
+         var08: vault_storage_secret
+         var09: storage_serial_2
+         var10: storage_address_2
+         var11: state_present
