--- a/get_constants.yml
+++ b/get_constants.yml
@@ -15,3 +15,10 @@
     - storage_serial_2: "{{svol_serial}}"
     - storage_address_2: "{{svol_ip}}"
     - state_present: "present"
+  tasks:
+    - debug:
+        msg:
+          m1: uai_gateway_address
+          m2: vault_gateway_username
+          m3: connection_type
+     
