--- a/get_constants.yml
+++ b/get_constants.yml
@@ -10,8 +10,8 @@
      - v4: "gateway"
      - v5: "{{pvol_serial}}"
      - v6: "{{pvol_ip}}"
-     - v7: "{{storage_user}}"
-     - v8: "{{storage_pass}}"
+     - v7: "{{stor_user}}"
+     - v8: "{{stor_pass}}"
      - v9: "{{svol_serial}}"
      - v10: "{{svol_ip}}"
      - v11: "present"
