--- a/create_ldev.yml
+++ b/create_ldev.yml
@@ -6,12 +6,10 @@
   gather_facts: false
   collections:
     - hitachivantara.vspone_block.vsp
-
-  vars_files:
-    - ansible_vault_gateway_var.yml
-    - ansible_vault_storage_var.yml
-    - vsp_uai_gateway_variables.yml
-
+  vars:
+    - ldev_pool_id_1: "{{pool_id}}"
+    - ldev_size_1: "{{size_1}}"
+    - ldev_name_1: "{{name_1}}"
   tasks:
     - name: Create Ldev
       hv_ldev:
