--- a/vsp_uai_gateway_variables.yml
+++ b/vsp_uai_gateway_variables.yml
@@ -1,5 +1,5 @@
 ####################################################################
-# Variables for ldev playbook
+# Variables for HUR Workflow
 ####################################################################
 # Common
 ####################################################################
